--- a/_modules/gstaichi/lang/ast/ast_transformers/call_transformer.html
+++ b/_modules/gstaichi/lang/ast/ast_transformers/call_transformer.html
@@ -499,7 +499,7 @@
                     <span class="k">except</span> <span class="ne">Exception</span> <span class="k">as</span> <span class="n">e</span><span class="p">:</span>
                         <span class="k">raise</span> <span class="ne">RuntimeError</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Exception whilst processing </span><span class="si">{</span><span class="n">field</span><span class="o">.</span><span class="n">name</span><span class="si">}</span><span class="s2"> in </span><span class="si">{</span><span class="nb">type</span><span class="p">(</span><span class="n">dataclass_type</span><span class="p">)</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span> <span class="kn">from</span><span class="w"> </span><span class="nn">e</span>
                     <span class="k">if</span> <span class="p">(</span>
-                        <span class="n">ctx</span><span class="o">.</span><span class="n">used_py_dataclass_parameters_enforcing</span>
+                        <span class="n">ctx</span><span class="o">.</span><span class="n">used_py_dataclass_parameters_enforcing</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span>
                         <span class="ow">and</span> <span class="n">child_name</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">ctx</span><span class="o">.</span><span class="n">used_py_dataclass_parameters_enforcing</span>
                     <span class="p">):</span>
                         <span class="k">continue</span>
@@ -542,7 +542,7 @@
                     <span class="n">src_name</span> <span class="o">=</span> <span class="n">create_flat_name</span><span class="p">(</span><span class="n">kwarg</span><span class="o">.</span><span class="n">value</span><span class="o">.</span><span class="n">id</span><span class="p">,</span> <span class="n">field</span><span class="o">.</span><span class="n">name</span><span class="p">)</span>
                     <span class="n">child_name</span> <span class="o">=</span> <span class="n">create_flat_name</span><span class="p">(</span><span class="n">kwarg</span><span class="o">.</span><span class="n">arg</span><span class="p">,</span> <span class="n">field</span><span class="o">.</span><span class="n">name</span><span class="p">)</span>
                     <span class="k">if</span> <span class="p">(</span>
-                        <span class="n">ctx</span><span class="o">.</span><span class="n">used_py_dataclass_parameters_enforcing</span>
+                        <span class="n">ctx</span><span class="o">.</span><span class="n">used_py_dataclass_parameters_enforcing</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span>
                         <span class="ow">and</span> <span class="n">child_name</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">ctx</span><span class="o">.</span><span class="n">used_py_dataclass_parameters_enforcing</span>
                     <span class="p">):</span>
                         <span class="k">continue</span>
