deploy: 3b4be6079bb32e26996acd42ab5e4e17acbda344

--- a/hp/prune-unused-dataclass-fields-adding-fastcache/_modules/gstaichi/lang/ast/ast_transformer.html
+++ b/hp/prune-unused-dataclass-fields-adding-fastcache/_modules/gstaichi/lang/ast/ast_transformer.html
@@ -415,7 +415,7 @@
                 <span class="k">else</span><span class="p">:</span>
                     <span class="k">raise</span> <span class="n">exception</span><span class="o">.</span><span class="n">GsTaichiCompilationError</span><span class="p">(</span><span class="n">message</span><span class="p">)</span>
         <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">node</span><span class="o">.</span><span class="n">ptr</span><span class="p">,</span> <span class="n">Generator</span><span class="p">):</span>
-            <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="s2">&quot;Cannot use generator inside kernels or functions&quot;</span><span class="p">)</span>
+            <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="s2">&quot;Cannot store generators in variables, inside kernels or functions&quot;</span><span class="p">)</span>
         <span class="k">return</span> <span class="n">node</span><span class="o">.</span><span class="n">ptr</span></div>
 
 
