--- a/hp/prune-unused-dataclass-fields-adding-fastcache/_modules/gstaichi/lang/kernel_impl.html
+++ b/hp/prune-unused-dataclass-fields-adding-fastcache/_modules/gstaichi/lang/kernel_impl.html
@@ -990,11 +990,6 @@
     <span class="n">cache_hit</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">False</span>
 
 
-<span class="nd">@dataclass</span>
-<span class="k">class</span><span class="w"> </span><span class="nc">LaunchStats</span><span class="p">:</span>
-    <span class="n">kernel_args_count_by_type</span><span class="p">:</span> <span class="nb">dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="nb">int</span><span class="p">]</span>
-
-
 <span class="k">def</span><span class="w"> </span><span class="nf">cast_float</span><span class="p">(</span><span class="n">x</span><span class="p">:</span> <span class="nb">float</span> <span class="o">|</span> <span class="n">np</span><span class="o">.</span><span class="n">floating</span> <span class="o">|</span> <span class="n">np</span><span class="o">.</span><span class="n">integer</span> <span class="o">|</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">float</span><span class="p">:</span>
     <span class="k">if</span> <span class="ow">not</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">x</span><span class="p">,</span> <span class="p">(</span><span class="nb">int</span><span class="p">,</span> <span class="nb">float</span><span class="p">,</span> <span class="n">np</span><span class="o">.</span><span class="n">integer</span><span class="p">,</span> <span class="n">np</span><span class="o">.</span><span class="n">floating</span><span class="p">)):</span>
         <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Invalid argument type &#39;</span><span class="si">{</span><span class="nb">type</span><span class="p">(</span><span class="n">x</span><span class="p">)</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span>
@@ -1007,7 +1002,7 @@
     <span class="k">return</span> <span class="nb">int</span><span class="p">(</span><span class="n">x</span><span class="p">)</span>
 
 
-<span class="k">class</span><span class="w"> </span><span class="nc">KernelBatchedArgType</span><span class="p">(</span><span class="n">IntEnum</span><span class="p">):</span>
+<span class="k">class</span><span class="w"> </span><span class="nc">_KernelBatchedArgType</span><span class="p">(</span><span class="n">IntEnum</span><span class="p">):</span>
     <span class="n">FLOAT</span> <span class="o">=</span> <span class="mi">0</span>
     <span class="n">INT</span> <span class="o">=</span> <span class="mi">1</span>
     <span class="n">UINT</span> <span class="o">=</span> <span class="mi">2</span>
@@ -1016,10 +1011,15 @@
 
 
 <span class="c1"># Define proxies for fast lookup</span>
-<span class="n">_FLOAT</span><span class="p">,</span> <span class="n">_INT</span><span class="p">,</span> <span class="n">_UINT</span><span class="p">,</span> <span class="n">_TI_ARRAY</span><span class="p">,</span> <span class="n">_TI_ARRAY_WITH_GRAD</span> <span class="o">=</span> <span class="n">KernelBatchedArgType</span>
+<span class="n">_FLOAT</span><span class="p">,</span> <span class="n">_INT</span><span class="p">,</span> <span class="n">_UINT</span><span class="p">,</span> <span class="n">_TI_ARRAY</span><span class="p">,</span> <span class="n">_TI_ARRAY_WITH_GRAD</span> <span class="o">=</span> <span class="n">_KernelBatchedArgType</span>
 
 
 <span class="n">ArgsHash</span><span class="p">:</span> <span class="n">TypeAlias</span> <span class="o">=</span> <span class="nb">int</span>
+
+
+<span class="nd">@dataclass</span>
+<span class="k">class</span><span class="w"> </span><span class="nc">LaunchStats</span><span class="p">:</span>
+    <span class="n">kernel_args_count_by_type</span><span class="p">:</span> <span class="nb">dict</span><span class="p">[</span><span class="n">_KernelBatchedArgType</span><span class="p">,</span> <span class="nb">int</span><span class="p">]</span>
 
 
 <span class="k">def</span><span class="w"> </span><span class="nf">_destroy_callback</span><span class="p">(</span><span class="n">kernel_ref</span><span class="p">:</span> <span class="n">ReferenceType</span><span class="p">[</span><span class="s2">&quot;Kernel&quot;</span><span class="p">],</span> <span class="n">ref</span><span class="p">:</span> <span class="n">ReferenceType</span><span class="p">):</span>
@@ -1034,7 +1034,7 @@
     <span class="n">used_py_dataclass_parameters</span><span class="p">:</span> <span class="nb">set</span><span class="p">[</span><span class="nb">tuple</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="o">...</span><span class="p">]],</span>
     <span class="n">py_dataclass_basename</span><span class="p">:</span> <span class="nb">tuple</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="o">...</span><span class="p">],</span>
     <span class="n">launch_ctx</span><span class="p">:</span> <span class="n">KernelLaunchContext</span><span class="p">,</span>
-    <span class="n">launch_ctx_buffer</span><span class="p">:</span> <span class="n">DefaultDict</span><span class="p">[</span><span class="n">KernelBatchedArgType</span><span class="p">,</span> <span class="nb">list</span><span class="p">[</span><span class="nb">tuple</span><span class="p">]],</span>
+    <span class="n">launch_ctx_buffer</span><span class="p">:</span> <span class="n">DefaultDict</span><span class="p">[</span><span class="n">_KernelBatchedArgType</span><span class="p">,</span> <span class="nb">list</span><span class="p">[</span><span class="nb">tuple</span><span class="p">]],</span>
     <span class="n">needed_arg_type</span><span class="p">:</span> <span class="n">Type</span><span class="p">,</span>
     <span class="n">provided_arg_type</span><span class="p">:</span> <span class="n">Type</span><span class="p">,</span>
     <span class="n">v</span><span class="p">:</span> <span class="n">Any</span><span class="p">,</span>
@@ -1587,7 +1587,7 @@
         <span class="k">except</span> <span class="p">(</span><span class="ne">TypeError</span><span class="p">,</span> <span class="ne">KeyError</span><span class="p">):</span>
             <span class="k">pass</span>
         <span class="k">if</span> <span class="ow">not</span> <span class="n">launch_ctx_cache_tracker</span><span class="p">:</span>  <span class="c1"># Empty or none</span>
-            <span class="n">launch_ctx_buffer</span><span class="p">:</span> <span class="n">DefaultDict</span><span class="p">[</span><span class="n">KernelBatchedArgType</span><span class="p">,</span> <span class="nb">list</span><span class="p">[</span><span class="nb">tuple</span><span class="p">]]</span> <span class="o">=</span> <span class="n">defaultdict</span><span class="p">(</span><span class="nb">list</span><span class="p">)</span>
+            <span class="n">launch_ctx_buffer</span><span class="p">:</span> <span class="n">DefaultDict</span><span class="p">[</span><span class="n">_KernelBatchedArgType</span><span class="p">,</span> <span class="nb">list</span><span class="p">[</span><span class="nb">tuple</span><span class="p">]]</span> <span class="o">=</span> <span class="n">defaultdict</span><span class="p">(</span><span class="nb">list</span><span class="p">)</span>
             <span class="n">actual_argument_slot</span> <span class="o">=</span> <span class="mi">0</span>
             <span class="n">is_launch_ctx_cacheable</span> <span class="o">=</span> <span class="kc">True</span>
             <span class="n">template_num</span> <span class="o">=</span> <span class="mi">0</span>
@@ -1617,33 +1617,32 @@
                 <span class="n">i_out</span> <span class="o">+=</span> <span class="n">num_args_</span>
                 <span class="n">is_launch_ctx_cacheable</span> <span class="o">&amp;=</span> <span class="n">is_launch_ctx_cacheable_</span>
 
+            <span class="n">kernel_args_count_by_type</span> <span class="o">=</span> <span class="n">defaultdict</span><span class="p">(</span><span class="nb">int</span><span class="p">)</span>
+            <span class="n">kernel_args_count_by_type</span><span class="o">.</span><span class="n">update</span><span class="p">(</span>
+                <span class="p">{</span><span class="n">key</span><span class="p">:</span> <span class="nb">len</span><span class="p">(</span><span class="n">launch_ctx_args</span><span class="p">)</span> <span class="k">for</span> <span class="n">key</span><span class="p">,</span> <span class="n">launch_ctx_args</span> <span class="ow">in</span> <span class="n">launch_ctx_buffer</span><span class="o">.</span><span class="n">items</span><span class="p">()}</span>
+            <span class="p">)</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">launch_stats</span> <span class="o">=</span> <span class="n">LaunchStats</span><span class="p">(</span><span class="n">kernel_args_count_by_type</span><span class="o">=</span><span class="n">kernel_args_count_by_type</span><span class="p">)</span>
+
             <span class="c1"># All arguments to context in batches to mitigate overhead of calling Python bindings repeatedly.</span>
             <span class="c1"># This is essential because calling any pybind11 function is adding ~180ns penalty no matter what.</span>
             <span class="c1"># Note that we are allowed to do this because GsTaichi Launch Kernel context is storing the input</span>
             <span class="c1"># arguments in an unordered list. The actual runtime (gfx, llvm...) will later query this context</span>
             <span class="c1"># in correct order.</span>
-            <span class="n">kernel_args_count_by_type</span> <span class="o">=</span> <span class="n">defaultdict</span><span class="p">(</span><span class="nb">int</span><span class="p">)</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">launch_stats</span> <span class="o">=</span> <span class="n">LaunchStats</span><span class="p">(</span><span class="n">kernel_args_count_by_type</span><span class="o">=</span><span class="n">kernel_args_count_by_type</span><span class="p">)</span>
             <span class="k">if</span> <span class="n">launch_ctx_args</span> <span class="o">:=</span> <span class="n">launch_ctx_buffer</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">_FLOAT</span><span class="p">):</span>
                 <span class="n">indices</span><span class="p">,</span> <span class="n">vec</span> <span class="o">=</span> <span class="nb">zip</span><span class="p">(</span><span class="o">*</span><span class="n">launch_ctx_args</span><span class="p">)</span>
-                <span class="n">kernel_args_count_by_type</span><span class="p">[</span><span class="s2">&quot;float&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="nb">len</span><span class="p">(</span><span class="n">indices</span><span class="p">)</span>
                 <span class="n">launch_ctx</span><span class="o">.</span><span class="n">set_args_float</span><span class="p">([</span><span class="n">index</span> <span class="k">for</span> <span class="n">index</span><span class="p">,</span> <span class="ow">in</span> <span class="n">indices</span><span class="p">],</span> <span class="n">vec</span><span class="p">)</span>  <span class="c1"># type: ignore</span>
             <span class="k">if</span> <span class="n">launch_ctx_args</span> <span class="o">:=</span> <span class="n">launch_ctx_buffer</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">_INT</span><span class="p">):</span>
                 <span class="n">indices</span><span class="p">,</span> <span class="n">vec</span> <span class="o">=</span> <span class="nb">zip</span><span class="p">(</span><span class="o">*</span><span class="n">launch_ctx_args</span><span class="p">)</span>
                 <span class="n">launch_ctx</span><span class="o">.</span><span class="n">set_args_int</span><span class="p">([</span><span class="n">index</span> <span class="k">for</span> <span class="n">index</span><span class="p">,</span> <span class="ow">in</span> <span class="n">indices</span><span class="p">],</span> <span class="n">vec</span><span class="p">)</span>  <span class="c1"># type: ignore</span>
-                <span class="n">kernel_args_count_by_type</span><span class="p">[</span><span class="s2">&quot;int&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="nb">len</span><span class="p">(</span><span class="n">indices</span><span class="p">)</span>
             <span class="k">if</span> <span class="n">launch_ctx_args</span> <span class="o">:=</span> <span class="n">launch_ctx_buffer</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">_UINT</span><span class="p">):</span>
                 <span class="n">indices</span><span class="p">,</span> <span class="n">vec</span> <span class="o">=</span> <span class="nb">zip</span><span class="p">(</span><span class="o">*</span><span class="n">launch_ctx_args</span><span class="p">)</span>
                 <span class="n">launch_ctx</span><span class="o">.</span><span class="n">set_args_uint</span><span class="p">([</span><span class="n">index</span> <span class="k">for</span> <span class="n">index</span><span class="p">,</span> <span class="ow">in</span> <span class="n">indices</span><span class="p">],</span> <span class="n">vec</span><span class="p">)</span>  <span class="c1"># type: ignore</span>
-                <span class="n">kernel_args_count_by_type</span><span class="p">[</span><span class="s2">&quot;uint&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="nb">len</span><span class="p">(</span><span class="n">indices</span><span class="p">)</span>
             <span class="k">if</span> <span class="n">launch_ctx_args</span> <span class="o">:=</span> <span class="n">launch_ctx_buffer</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">_TI_ARRAY</span><span class="p">):</span>
                 <span class="n">indices</span><span class="p">,</span> <span class="n">arrs</span> <span class="o">=</span> <span class="nb">zip</span><span class="p">(</span><span class="o">*</span><span class="n">launch_ctx_args</span><span class="p">)</span>
                 <span class="n">launch_ctx</span><span class="o">.</span><span class="n">set_args_ndarray</span><span class="p">([</span><span class="n">index</span> <span class="k">for</span> <span class="n">index</span><span class="p">,</span> <span class="ow">in</span> <span class="n">indices</span><span class="p">],</span> <span class="n">arrs</span><span class="p">)</span>  <span class="c1"># type: ignore</span>
-                <span class="n">kernel_args_count_by_type</span><span class="p">[</span><span class="s2">&quot;ndarray&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="nb">len</span><span class="p">(</span><span class="n">indices</span><span class="p">)</span>
             <span class="k">if</span> <span class="n">launch_ctx_args</span> <span class="o">:=</span> <span class="n">launch_ctx_buffer</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">_TI_ARRAY_WITH_GRAD</span><span class="p">):</span>
                 <span class="n">indices</span><span class="p">,</span> <span class="n">arrs</span><span class="p">,</span> <span class="n">arrs_grad</span> <span class="o">=</span> <span class="nb">zip</span><span class="p">(</span><span class="o">*</span><span class="n">launch_ctx_args</span><span class="p">)</span>
                 <span class="n">launch_ctx</span><span class="o">.</span><span class="n">set_args_ndarray_with_grad</span><span class="p">([</span><span class="n">index</span> <span class="k">for</span> <span class="n">index</span><span class="p">,</span> <span class="ow">in</span> <span class="n">indices</span><span class="p">],</span> <span class="n">arrs</span><span class="p">,</span> <span class="n">arrs_grad</span><span class="p">)</span>  <span class="c1"># type: ignore</span>
-                <span class="n">kernel_args_count_by_type</span><span class="p">[</span><span class="s2">&quot;ndarray_with_grad&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="nb">len</span><span class="p">(</span><span class="n">indices</span><span class="p">)</span>
 
             <span class="k">if</span> <span class="n">is_launch_ctx_cacheable</span> <span class="ow">and</span> <span class="n">args_hash</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span><span class="p">:</span>
                 <span class="c1"># TODO: It some rare occurrences, arguments can be cached yet not hashable. Ignoring for now...</span>
@@ -2053,7 +2052,7 @@
 
 
 
-<span class="n">__all__</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;data_oriented&quot;</span><span class="p">,</span> <span class="s2">&quot;func&quot;</span><span class="p">,</span> <span class="s2">&quot;kernel&quot;</span><span class="p">,</span> <span class="s2">&quot;pyfunc&quot;</span><span class="p">,</span> <span class="s2">&quot;real_func&quot;</span><span class="p">]</span>
+<span class="n">__all__</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;data_oriented&quot;</span><span class="p">,</span> <span class="s2">&quot;func&quot;</span><span class="p">,</span> <span class="s2">&quot;kernel&quot;</span><span class="p">,</span> <span class="s2">&quot;pyfunc&quot;</span><span class="p">,</span> <span class="s2">&quot;real_func&quot;</span><span class="p">,</span> <span class="s2">&quot;_KernelBatchedArgType&quot;</span><span class="p">]</span>
 </pre></div>
 
                 </article>
