--- a/duburcqa/update_x86_arch/genindex.html
+++ b/duburcqa/update_x86_arch/genindex.html
@@ -856,6 +856,8 @@
 </li>
       <li><a href="autoapi/gstaichi/lang/ops/index.html#gstaichi.lang.ops.exp">exp() (in module gstaichi.lang.ops)</a>
 </li>
+      <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.expanding_dataclass_call_parameters">expanding_dataclass_call_parameters (gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext attribute)</a>
+</li>
       <li><a href="autoapi/gstaichi/tools/np2ply/index.html#gstaichi.tools.np2ply.PLYWriter.export">export() (gstaichi.tools.np2ply.PLYWriter method)</a>
 </li>
       <li><a href="autoapi/gstaichi/tools/np2ply/index.html#gstaichi.tools.np2ply.PLYWriter.export_ascii">export_ascii() (gstaichi.tools.np2ply.PLYWriter method)</a>
@@ -2661,10 +2663,10 @@
 </li>
       <li><a href="autoapi/gstaichi/types/primitive_types/index.html#gstaichi.types.primitive_types.uint16">uint16 (in module gstaichi.types.primitive_types)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/gstaichi/types/primitive_types/index.html#gstaichi.types.primitive_types.uint32">uint32 (in module gstaichi.types.primitive_types)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/gstaichi/types/primitive_types/index.html#gstaichi.types.primitive_types.uint64">uint64 (in module gstaichi.types.primitive_types)</a>
 </li>
       <li><a href="autoapi/gstaichi/types/primitive_types/index.html#gstaichi.types.primitive_types.uint8">uint8 (in module gstaichi.types.primitive_types)</a>
@@ -2672,6 +2674,10 @@
       <li><a href="autoapi/gstaichi/lang/simt/warp/index.html#gstaichi.lang.simt.warp.unique">unique() (in module gstaichi.lang.simt.warp)</a>
 </li>
       <li><a href="autoapi/gstaichi/lang/matrix/index.html#gstaichi.lang.matrix.Matrix.unit">unit() (gstaichi.lang.matrix.Matrix static method)</a>
+</li>
+      <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.used_py_dataclass_parameters_collecting">used_py_dataclass_parameters_collecting (gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext attribute)</a>
+</li>
+      <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.used_py_dataclass_parameters_enforcing">used_py_dataclass_parameters_enforcing (gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext attribute)</a>
 </li>
       <li><a href="autoapi/gstaichi/math/mathimpl/index.html#gstaichi.math.mathimpl.uvec2">uvec2 (in module gstaichi.math.mathimpl)</a>
 </li>
