--- a/duburcqa/update_x86_arch/_modules/gstaichi/lang/ast/ast_transformer_utils.html
+++ b/duburcqa/update_x86_arch/_modules/gstaichi/lang/ast/ast_transformer_utils.html
@@ -608,6 +608,10 @@
         <span class="n">is_real_function</span><span class="p">:</span> <span class="nb">bool</span><span class="p">,</span>
         <span class="n">autodiff_mode</span><span class="p">:</span> <span class="n">AutodiffMode</span><span class="p">,</span>
         <span class="n">raise_on_templated_floats</span><span class="p">:</span> <span class="nb">bool</span><span class="p">,</span>
+        <span class="c1"># during 1st pass, we collect the names of used parameters</span>
+        <span class="n">used_py_dataclass_parameters_collecting</span><span class="p">:</span> <span class="nb">set</span><span class="p">[</span><span class="nb">str</span><span class="p">],</span>
+        <span class="c1"># during 2nd pass, we only handle these names</span>
+        <span class="n">used_py_dataclass_parameters_enforcing</span><span class="p">:</span> <span class="nb">set</span><span class="p">[</span><span class="nb">str</span><span class="p">]</span> <span class="o">|</span> <span class="kc">None</span><span class="p">,</span>
     <span class="p">):</span>
         <span class="kn">from</span><span class="w"> </span><span class="nn">gstaichi</span><span class="w"> </span><span class="kn">import</span> <span class="n">extension</span>  <span class="c1"># pylint: disable=import-outside-toplevel</span>
 
@@ -735,6 +739,18 @@
 <div class="viewcode-block" id="ASTTransformerContext.raise_on_templated_floats">
 <a class="viewcode-back" href="../../../../autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.raise_on_templated_floats">[docs]</a>
         <span class="bp">self</span><span class="o">.</span><span class="n">raise_on_templated_floats</span> <span class="o">=</span> <span class="n">raise_on_templated_floats</span></div>
+
+<div class="viewcode-block" id="ASTTransformerContext.used_py_dataclass_parameters_collecting">
+<a class="viewcode-back" href="../../../../autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.used_py_dataclass_parameters_collecting">[docs]</a>
+        <span class="bp">self</span><span class="o">.</span><span class="n">used_py_dataclass_parameters_collecting</span> <span class="o">=</span> <span class="n">used_py_dataclass_parameters_collecting</span></div>
+
+<div class="viewcode-block" id="ASTTransformerContext.used_py_dataclass_parameters_enforcing">
+<a class="viewcode-back" href="../../../../autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.used_py_dataclass_parameters_enforcing">[docs]</a>
+        <span class="bp">self</span><span class="o">.</span><span class="n">used_py_dataclass_parameters_enforcing</span> <span class="o">=</span> <span class="n">used_py_dataclass_parameters_enforcing</span></div>
+
+<div class="viewcode-block" id="ASTTransformerContext.expanding_dataclass_call_parameters">
+<a class="viewcode-back" href="../../../../autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.expanding_dataclass_call_parameters">[docs]</a>
+        <span class="bp">self</span><span class="o">.</span><span class="n">expanding_dataclass_call_parameters</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">False</span></div>
 
 
 <div class="viewcode-block" id="ASTTransformerContext.adstack_enabled">
