deploy: 11c3965e85a6457843f370b2b5437be500ad7717

--- a/_modules/gstaichi/lang/field.html
+++ b/_modules/gstaichi/lang/field.html
@@ -616,6 +616,12 @@
     <span class="k">def</span><span class="w"> </span><span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">var</span><span class="p">):</span>
         <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="fm">__init__</span><span class="p">([</span><span class="n">var</span><span class="p">])</span>
 
+<div class="viewcode-block" id="ScalarField.to_dlpack">
+<a class="viewcode-back" href="../../../autoapi/gstaichi/lang/field/index.html#gstaichi.lang.field.ScalarField.to_dlpack">[docs]</a>
+    <span class="k">def</span><span class="w"> </span><span class="nf">to_dlpack</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+        <span class="k">return</span> <span class="n">impl</span><span class="o">.</span><span class="n">get_runtime</span><span class="p">()</span><span class="o">.</span><span class="n">prog</span><span class="o">.</span><span class="n">field_to_dlpack</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_snode</span><span class="o">.</span><span class="n">ptr</span><span class="p">,</span> <span class="mi">0</span><span class="p">,</span> <span class="mi">0</span><span class="p">,</span> <span class="mi">0</span><span class="p">)</span></div>
+
+
 <div class="viewcode-block" id="ScalarField.fill">
 <a class="viewcode-back" href="../../../autoapi/gstaichi/lang/field/index.html#gstaichi.lang.field.ScalarField.fill">[docs]</a>
     <span class="k">def</span><span class="w"> </span><span class="nf">fill</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">val</span><span class="p">):</span>
